fixed the dots alignmnet issue

--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -70,8 +70,7 @@
     position: absolute;
     visibility: hidden;
   }
-  .homebox {
-    height: 100vh;
+  .homebox {    height: 100vh;
     width: 100vw;
     display: flex;
     align-items: center;
